using dt to animate the rotation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="utf-8"/>
 
         <title>div3d</title>
+
+        <style type="text/css">
+            body {
+                font-family: sans-serif;
+            }
+        </style>
     </head>
 
     <body>
