--- a/sample1.html
+++ b/sample1.html
@@ -5,6 +5,9 @@
 
         <title>div3d - sample 1</title>
 
+        <!--<meta name="viewport" content="width=1024, maximum-scale=1, user-scalable=no"/>-->
+        <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no"/>
+
         <link type="text/css" rel="stylesheet" href="div3d.css"/>
         <link type="text/css" rel="stylesheet" href="sample1.css"/>
 
