--- a/sample1.html
+++ b/sample1.html
@@ -5,8 +5,8 @@
 
         <title>div3d - sample 1</title>
 
-        <!--<meta name="viewport" content="width=1024, maximum-scale=1, user-scalable=no"/>-->
-        <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no"/>
+        <meta name="viewport" content="width=1024, maximum-scale=1, user-scalable=no"/>
+        <!--<meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no"/>-->
 
         <link type="text/css" rel="stylesheet" href="div3d.css"/>
         <link type="text/css" rel="stylesheet" href="sample1.css"/>
@@ -18,10 +18,7 @@
 
     <body>
         <div class="container">
-            <div id="g1" class="node">
-                <div id="n1" class="node">1</div>
-                <div id="n2" class="node">2</div>
-            </div>
+            <div id="g1" class="node"></div>
         </div>
 
         <script type="text/javascript" src="sample1.js"></script>
