--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <h1>div3d</h1>
 
         <ul>
-            <li><a href="sample1.html">1</a></li>
+            <li><a href="sample1.html">1 - rotating cube</a></li>
+            <li><a href="sample2.html">2 - rotating cube with animated gif on faces and orbiting title</a></li>
         </ul>
     </body>
 </html>
