revamped structure, improved api, started docs

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
     <body>
         <h1>div3d</h1>
 
+        <h2>samples</h2>
+
         <ul>
-            <li><a href="sample1.html">1 - rotating cube</a></li>
-            <li><a href="sample2.html">2 - rotating cube with animated gif on faces and orbiting title</a></li>
+            <li><a href="samples/1.html">1 - rotating cube</a></li>
+            <li><a href="samples/2.html">2 - rotating cube with animated gif on faces and orbiting title</a></li>
         </ul>
+
+        <p><a href="API.html">API</a></p>
+
+        <p><a href="TODO.html">TODO</a></p>
     </body>
 </html>
