--- a/TODO.html
+++ b/TODO.html
@@ -11,16 +11,21 @@
 </head>
 <body>
 <h1 id="todos">TODOs</h1>
-<p>common transform methods exposed from obj</p>
-<p>utility constructors:</p>
+<h2 id="utility-constructors">utility constructors:</h2>
 <ul>
 <li>box</li>
 <li>cube (inverted option for sky boxes)</li>
 <li>cylinder</li>
 </ul>
-<p>camera abstraction</p>
-<p>look at</p>
-<p>samples with kb and mouse</p>
-<p>trackball exploration</p>
+<h2 id="camera-abstractions">camera abstractions</h2>
+<ul>
+<li>look at</li>
+<li>isometric / ortho (are these possible?)</li>
+</ul>
+<h2 id="samples">samples:</h2>
+<ul>
+<li>coverflow</li>
+<li>airport clock</li>
+</ul>
 </body>
 </html>
