--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <ul>
             <li><a href="samples/1.html">1 - rotating cube</a></li>
             <li><a href="samples/2.html">2 - rotating cube with animated gif on faces and orbiting title</a></li>
+            <li><a href="samples/3.html">3 - cube</a></li>
         </ul>
 
         <p><a href="API.html">API</a></p>
