--- a/samples/1.html
+++ b/samples/1.html
@@ -3,19 +3,14 @@
     <head>
         <meta charset="utf-8"/>
 
-        <title>div3d - sample 1</title>
+        <title>div3d - 1</title>
 
         <meta name="viewport" content="width=1024, maximum-scale=1, user-scalable=no"/>
-        <!--<meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no"/>-->
 
         <link type="text/css" rel="stylesheet" href="../bin/div3d.css"/>
         <link type="text/css" rel="stylesheet" href="1.css"/>
 
-        <script type="text/javascript" src="../aux/raf.js"></script>
-        <script type="text/javascript" src="../aux/gl-matrix.js"></script>
-
-        <!--<script type="text/javascript" src="../bin/div3d.js"></script>-->
-        <script type="text/javascript" src="../src/div3d.js"></script>
+        <script type="text/javascript" src="../bin/div3d.bundle.min.js"></script>
     </head>
 
     <body>
