--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     </head>
 
     <body>
-        <h1>div3d</h1>
+        <h1>.: div3d :.</h1>
+
+
+        <h2>documentation</h2>
+
+        <ul>
+            <li><a href="docs/">div3d.js</a></li>
+        </ul>
+
 
         <h2>samples</h2>
 
@@ -23,8 +31,5 @@
             <li><a href="samples/3.html">3 - cube</a></li>
         </ul>
 
-        <p><a href="API.html">API</a></p>
-
-        <p><a href="TODO.html">TODO</a></p>
     </body>
 </html>
