improved documentation and makefile

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <h1>.: div3d :.</h1>
 
 
+        <h2>source code</h2>
+
+        <ul>
+            <li><a href="http://github.com/josepedrodias/div3d">div3d @ github</a></li>
+        </ul>
+
+
         <h2>documentation</h2>
 
         <ul>
