--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <li><a href="samples/1.html">1 - rotating cube</a></li>
             <li><a href="samples/2.html">2 - rotating cube with animated gif on faces and orbiting title</a></li>
             <li><a href="samples/3.html">3 - cube</a></li>
+            <li><a href="samples/4.html">4 - soccer field</a></li>
+            <li><a href="samples/5.html">5 - rubik's cube</a></li>
         </ul>
 
     </body>
