added min version of samples, updated sample 1

--- a/index.html
+++ b/index.html
@@ -33,11 +33,26 @@
         <h2>samples</h2>
 
         <ul>
-            <li><a href="samples/1.html">1 - rotating cube</a></li>
-            <li><a href="samples/2.html">2 - rotating cube with animated gif on faces and orbiting title</a></li>
-            <li><a href="samples/3.html">3 - cube</a></li>
-            <li><a href="samples/4.html">4 - soccer field</a></li>
-            <li><a href="samples/5.html">5 - rubik's cube</a></li>
+            <li>
+                <a href="samples/1.html">1 - rotating cube</a>
+                <a href="samples/1_dbg.html"> (debug)</a>
+            </li>
+            <li>
+                <a href="samples/2.html">2 - rotating cube with animated gif on faces and orbiting title</a>
+                <a href="samples/2_dbg.html"> (debug)</a>
+            </li>
+            <li>
+                <a href="samples/3.html">3 - cube</a>
+                <a href="samples/3_dbg.html"> (debug)</a>
+            </li>
+            <li>
+                <a href="samples/4.html">4 - soccer field</a>
+                <a href="samples/4_dbg.html"> (debug)</a>
+            </li>
+            <li>
+                <a href="samples/5.html">5 - rubik's cube</a>
+                <a href="samples/5_dbg.html"> (debug)</a>
+            </li>
         </ul>
 
     </body>
