--- a/samples/4.html
+++ b/samples/4.html
@@ -10,7 +10,7 @@
         <link type="text/css" rel="stylesheet" href="../bin/div3d.css"/>
         <link type="text/css" rel="stylesheet" href="4.css"/>
 
-        <script type="text/javascript" src="../bin/div3d.bundle.dbg.js"></script>
+        <script type="text/javascript" src="../bin/div3d.bundle.min.js"></script>
     </head>
 
     <body>
