--- a/samples/4_dbg.html
+++ b/samples/4_dbg.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8"/>
 
-        <title>div3d - 3</title>
+        <title>div3d - 4</title>
 
         <meta name="viewport" content="width=1024, maximum-scale=1, user-scalable=no"/>
 
         <link type="text/css" rel="stylesheet" href="../bin/div3d.css"/>
-        <link type="text/css" rel="stylesheet" href="3.css"/>
+        <link type="text/css" rel="stylesheet" href="4.css"/>
 
-        <script type="text/javascript" src="../bin/div3d.bundle.min.js"></script>
+        <script type="text/javascript" src="../bin/div3d.bundle.dbg.js"></script>
     </head>
 
     <body>
-        <script type="text/javascript" src="3.js"></script>
+        <script type="text/javascript" src="4.js"></script>
     </body>
 </html>
