ongoing camera fixes

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                 <a href="samples/5.html">5 - rubik's cube</a>
                 <a href="samples/5_dbg.html"> (debug)</a>
             </li>
+            <li>
+                <a href="samples/6.html">6 - lines</a>
+                <a href="samples/6_dbg.html"> (debug)</a>
+            </li>
+            <li>
+                <a href="samples/7.html">7 - cubemap</a>
+                <a href="samples/7_dbg.html"> (debug)</a>
+            </li>
         </ul>
 
     </body>
